--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,12 @@ pandas = "^1.0.3"
 requests = "^2.23"
 
 # Optional inference toolkits
-jupyter = "^1.0.0"
 pymc3 = "^3.9"
 arviz = "<0.11"
 seaborn = "^0.10.0"
 tqdm = "^4.45.0"
 graphviz = "^0.13.2"
-jupyterlab = "^2.1.1"
+jupyterlab = "^3.0"
 nbdime = "^2.0.0"
 pyreadr = "^0.2.9"
 sklearn = "^0.0"
@@ -32,8 +31,7 @@ sphinx_rtd_theme = {version = "^0.5.0", extras = ["documentation"]}
 pandoc = {version = "^1.0.2", extras = ["documentation"]}
 pypandoc = {version = "^1.5", extras = ["documentation"]}
 threadpoolctl = "^2.1.0"
-
-
+jedi = "<=0.17.2"
 
 [tool.poetry.extras]
 documentation = ["sphinx^3.2.1", "sphinx-argparse^0.2.5", "sphinxcontrib-autoyaml^0.5.0", "nbsphinx^0.7.1", "sphinx_rtd_theme^0.5.0", "pypandoc^1.5"]
