--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pandoc = {version = "^1.0.2", extras = ["documentation"]}
 pypandoc = {version = "^1.5", extras = ["documentation"]}
 threadpoolctl = "^2.1.0"
 jedi = "<=0.17.2"
+zstd = "^1.4.9"
 
 [tool.poetry.extras]
 documentation = ["sphinx^3.2.1", "sphinx-argparse^0.2.5", "sphinxcontrib-autoyaml^0.5.0", "nbsphinx^0.7.1", "sphinx_rtd_theme^0.5.0", "pypandoc^1.5"]
